CALC-222 - content assist for R script in step-edit (work in progress)

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -226,6 +226,7 @@
 	<script src="./js/jquery.easing.js"></script>	
 	<script src="./js/jquery-ui-effects.js"></script>	
 	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/dropdown.js"></script>
 	<script src="./js/modal.js"></script>
 	<script src="./js/tooltip.js"></script>
 	<script src="./js/typeahead.min.js"></script>
@@ -236,12 +237,22 @@
 	<!-- Url parser jqeury plugin -->
 	<script src="./js/purl.js"></script>
 	
+	<script src="./js/jquery.caret.js"></script>
+	
+	<!-- caret position jquery plugin -->
+	<script src="./js/jquery-caretpixelpos/cursor_position.js"></script>
+	<script src="./js/jquery-caretpixelpos/jquery.caretpixelpos.js"></script>
+	<script src="./js/jquery-caretpixelpos/selection_range.js"></script>
+	<script src="./js/jquery-caretpixelpos/string_splitter.js"></script>
+	
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc.js"></script>
+	<script src="./js/calc-stringutils.js"></script>
 	<script src="./js/calc-ui.js"></script>
 	<script src="./js/calc-ui-form.js"></script>
 	<script src="./js/workspace-manager.js"></script>
 	<script src="./js/calculation-step-manager.js"></script>
+	<script src="./js/r-script.js"></script>
 	
 	<!-- data manipulation managers -->
 	<script src="./js/data-manager.js"></script>
