implemented js workflow to work with active workspace in WorkspaceManager; added possibility to select sampling unit; added possibility to select type of aggregates for quantitative variables

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -252,6 +252,7 @@
 	<script src="./js/calc-ui.js"></script>
 	<script src="./js/calc-ui-form.js"></script>
 	<script src="./js/workspace-manager.js"></script>
+	<script src="./js/workspace.js"></script>
 	<script src="./js/calculation-step-manager.js"></script>
 	<script src="./js/r-script.js"></script>
 	
