--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -7,10 +7,10 @@
 <!-- 				<div class=""> -->
 <!-- 					<ul class="nav navbar-nav"> -->
 <!-- 						<li class="active"> -->
-<!-- 							<a href="./Bootswatch  Flatly_files/Bootswatch  Flatly.html">Active</a> -->
+<!-- 							<a href="active">Active</a> -->
 <!-- 						</li> -->
 <!-- 						<li> -->
-<!-- 							<a href="./Bootswatch  Flatly_files/Bootswatch  Flatly.html">Link</a> -->
+<!-- 							<a href="link">Link</a> -->
 <!-- 						</li> -->
 <!-- 					</ul> -->
 <!-- 				</div> -->
@@ -540,8 +540,6 @@ $(function(){
 		if(execOptions.is(":visible")) {
 // 			execOptions.animate({width:'0px'}, 200,'easeInOutExpo');
 // 			execOptions.fadeOut(100);
-			
-			
 // 			setTimeout(function(){execOptions.hide()}, 500);
 		} else {
 			execOptions.css({width:"0px"});
