added possibility to select aggregates even for variables per ha

--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -13,14 +13,12 @@
 			</div>
 			<div class="row sampling-unit-section" style="padding-top: 50px;">
 				<div class="col-md-2 no-padding entities">
-<!-- 					<button type="button" class="btn default-btn">Tree</button> -->
-<!-- 					<button type="button" class="btn default-btn">Fuck</button> -->
 				</div>
 				<div class="col-md-2 no-padding variables">
 				</div>
 				<div class="col-md-2 no-padding variable">
 				</div>
-				<div class="col-md-2 no-padding variable-agg">
+				<div class="col-md-2 no-padding variable-per-ha">
 				</div>
 			</div>
 <!-- 		</div> -->
