Create Entity model object and move functions from Workspace to Entity

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -251,15 +251,19 @@
 	<script src="./js/calc-stringutils.js"></script>
 	<script src="./js/calc-ui.js"></script>
 	<script src="./js/calc-ui-form.js"></script>
-	<script src="./js/workspace-manager.js"></script>
+	<!-- model objects -->
 	<script src="./js/workspace.js"></script>
+	<script src="./js/entity.js"></script>
+	<!-- managers -->
+	<script src="./js/workspace-manager.js"></script>
 	<script src="./js/calculation-step-manager.js"></script>
-	<script src="./js/r-script.js"></script>
 	
 	<!-- data manipulation managers -->
 	<script src="./js/data-manager.js"></script>
 	<script src="./js/data-table.js"></script>
 	<script src="./js/scatter-plot.js"></script>
+	
+	<script src="./js/r-script.js"></script>
 	
 	<!-- sampling design  -->
 	<script src="./js/sampling-design-manager.js"></script>
