Make RScript component extend Autocomplete custom component

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -251,6 +251,8 @@
 	<script src="./js/calc-stringutils.js"></script>
 	<script src="./js/calc-ui.js"></script>
 	<script src="./js/calc-ui-form.js"></script>
+	<script src="./js/calc-autocomplete.js"></script>
+	
 	<!-- model objects -->
 	<script src="./js/workspace.js"></script>
 	<script src="./js/entity.js"></script>
