Move js files in subfolders

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -221,54 +221,54 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
 	
-	<script src="./js/jquery.min.js"></script>
-<!-- 	<script src="./js/jquery.js"></script> -->
-	<script src="./js/jquery.form.min.js"></script>	
-	<script src="./js/jquery.easing.js"></script>	
-	<script src="./js/jquery-ui-effects.js"></script>	
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/dropdown.js"></script>
-	<script src="./js/modal.js"></script>
-	<script src="./js/tooltip.js"></script>
-	<script src="./js/typeahead.min.js"></script>
-	<script src="./js/bootstrap-combobox.js"></script>
+	<!-- JQuery -->
+	<script src="./js/jquery/jquery.min.js"></script>
+<!-- 	<script src="./js/jquery/jquery.js"></script> -->
+	<script src="./js/jquery/plugin/jquery.form.min.js"></script>	
+	<script src="./js/jquery/plugin/jquery.easing.js"></script>	
+	<script src="./js/jquery/plugin/jquery-ui-effects.js"></script>
+	<!-- Url parser jqeury plugin -->
+	<script src="./js/jquery/plugin/purl.js"></script>
+	<script src="./js/jquery/plugin/jquery.caret.js"></script>
+	<script src="./js/jquery/plugin/typeahead.min.js"></script>
+	<!-- caret position jquery plugin -->
+	<script src="./js/jquery/plugin/caretpixelpos/cursor_position.js"></script>
+	<script src="./js/jquery/plugin/caretpixelpos/jquery.caretpixelpos.js"></script>
+	<script src="./js/jquery/plugin/caretpixelpos/selection_range.js"></script>
+	<script src="./js/jquery/plugin/caretpixelpos/string_splitter.js"></script>
+	
+	<!-- Bootstrap -->
+	<script src="./js/bootstrap/bootstrap.min.js"></script>
+	<script src="./js/bootstrap/dropdown.js"></script>
+	<script src="./js/bootstrap/modal.js"></script>
+	<script src="./js/bootstrap/tooltip.js"></script>
+	<script src="./js/bootstrap/plugin/bootstrap-combobox.js"></script>
 	
 	<!-- chart jquery plugin -->
 	<script src="js/highcharts.js"></script>
-	<!-- Url parser jqeury plugin -->
-	<script src="./js/purl.js"></script>
-	
-	<script src="./js/jquery.caret.js"></script>
-	
-	<!-- caret position jquery plugin -->
-	<script src="./js/jquery-caretpixelpos/cursor_position.js"></script>
-	<script src="./js/jquery-caretpixelpos/jquery.caretpixelpos.js"></script>
-	<script src="./js/jquery-caretpixelpos/selection_range.js"></script>
-	<script src="./js/jquery-caretpixelpos/string_splitter.js"></script>
 	
 	<!-- ==== Custom javascript -->
-	<script src="./js/calc.js"></script>
-	<script src="./js/calc-stringutils.js"></script>
-	<script src="./js/calc-ui.js"></script>
-	<script src="./js/calc-ui-form.js"></script>
-	<script src="./js/calc-autocomplete.js"></script>
+	<script src="./js/calc/calc.js"></script>
+	<script src="./js/calc/calc-stringutils.js"></script>
+	<script src="./js/calc/calc-ui.js"></script>
+	<script src="./js/calc/calc-ui-form.js"></script>
+	<script src="./js/calc/calc-autocomplete.js"></script>
+	<script src="./js/calc/r-script.js"></script>
 	
 	<!-- model objects -->
-	<script src="./js/workspace.js"></script>
-	<script src="./js/entity.js"></script>
+	<script src="./js/calc/workspace.js"></script>
+	<script src="./js/calc/entity.js"></script>
 	<!-- managers -->
-	<script src="./js/workspace-manager.js"></script>
-	<script src="./js/calculation-step-manager.js"></script>
+	<script src="./js/calc/workspace-manager.js"></script>
+	<script src="./js/calc/calculation-step-manager.js"></script>
 	
 	<!-- data manipulation managers -->
-	<script src="./js/data-manager.js"></script>
-	<script src="./js/data-table.js"></script>
-	<script src="./js/scatter-plot.js"></script>
-	
-	<script src="./js/r-script.js"></script>
+	<script src="./js/calc/data-manager.js"></script>
+	<script src="./js/calc/data-table.js"></script>
+	<script src="./js/calc/scatter-plot.js"></script>
 	
 	<!-- sampling design  -->
-	<script src="./js/sampling-design-manager.js"></script>
+	<script src="./js/calc/sampling-design-manager.js"></script>
 	
 </body>
 </html>
