--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -254,13 +254,15 @@
 	<script src="./js/calc/calc-ui-form.js"></script>
 	<script src="./js/calc/calc-autocomplete.js"></script>
 	<script src="./js/calc/r-script.js"></script>
-	
+
 	<!-- model objects -->
 	<script src="./js/calc/workspace.js"></script>
 	<script src="./js/calc/entity.js"></script>
 	<!-- managers -->
+	<script src="./js/calc/home-calculation-manager.js"></script>
 	<script src="./js/calc/workspace-manager.js"></script>
 	<script src="./js/calc/calculation-step-manager.js"></script>
+	<script src="./js/calc/calculation-step-presenter.js"></script>
 	
 	<!-- data manipulation managers -->
 	<script src="./js/calc/data-manager.js"></script>
