delete sampling unit added to sampling design setting page

--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -5,7 +5,7 @@
 			<div class="row col-md-12">
 				<div class="form-group">
 						<label class="col-md-2 control-label">Sampling Unit</label>
-						<div class="col-md-10">
+						<div class="col-md-4">
 <!-- 							<input type="text" class="form-control" name="sampling-unit"> -->
 							<select class="form-control" name="sampling-unit"></select>
 						</div>
@@ -14,15 +14,25 @@
 			<div class="row sampling-unit-section" style="padding-top: 50px;">
 				<div class="col-md-2 no-padding entities">
 				</div>
-				<div class="col-md-2 no-padding variables">
-				</div>
-				<div class="col-md-2 no-padding variable">
-				</div>
-				<div class="col-md-2 no-padding variable-per-ha">
+				<div class="col-md-9 no-padding" style="margin-left: 20px; padding: 20px; border-left: 1px solid #ecf0f1;">
+					<!-- inclusion area settings -->
+					<div class="row no-margin" >
+						<div class="col-md-2">Plot area: </div>
+						<div class="col-md-10" style="text-align: left"><input type="text"> </div>
+					</div>
+					<!-- variable aggregates section -->
+					<div class="row no-margin" style="padding-top: 30px;">
+						<div class="col-md-2 no-padding variables">
+						</div>
+						<div class="col-md-2 no-padding variable">
+						</div>
+						<div class="col-md-2 no-padding variable-per-ha">
+						</div>
+					</div>
 				</div>
 			</div>
 <!-- 		</div> -->
-	</div>	
+		</div>	
 	<script>
 	$(function() {
 
