--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -14,11 +14,12 @@
 			<div class="row sampling-unit-section" style="padding-top: 50px;">
 				<div class="col-md-2 no-padding entities">
 				</div>
-				<div class="col-md-9 no-padding" style="margin-left: 20px; padding: 20px; border-left: 1px solid #ecf0f1;">
+				
+				<div class="col-md-9 no-padding" class="aggregate-settings-section">
 					<!-- inclusion area settings -->
-					<div class="row no-margin" >
+					<div class="row no-margin" class="plot-area-section">
 						<div class="col-md-2">Plot area: </div>
-						<div class="col-md-10" style="text-align: left"><input type="text"> </div>
+						<div class="col-md-10" style="text-align: left"><input type="text" name="plot-area" class="form-control"> </div>
 					</div>
 					<!-- variable aggregates section -->
 					<div class="row no-margin" style="padding-top: 30px;">
