started workin on ui to add runall/delete/filter? buttons

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -37,10 +37,24 @@
 	<div id="container">
 	 	<div class="section-home calculation" id="calculation">
 	 		<div class="page-section">
+	 			
 		  		<div class="steps-container">
-		 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
-	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
-	 				</button>
+		  		<!-- TODO check why removing border, height is set to 0 by the browser? -->
+		  			<div style="width: 30em ; float:left; border:1px solid #2c3e50; display: block;" >
+		  				<div style="position: fixed; width: 30em ;">
+			 				<div class="row no-margin" >
+				 				<div class="col-md-6 no-padding">
+				 					<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
+					 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
+					 				</button>
+				 				</div>
+				 				<div class="col-md-6 no-padding"></div>
+			 				</div>
+		  				</div>
+		 			</div>
+<!-- 		 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html"> -->
+<!-- 	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i> -->
+<!-- 	 				</button> -->
 		  		</div>
 		  		<button type="button" class="btn btn-default btn-home calculation-button template"
 		  		 	style="display: none"></button>
