new java script folders structure

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -270,21 +270,23 @@
 	<script src="./js/calc/r-script.js"></script>
 
 	<!-- model objects -->
-	<script src="./js/calc/workspace.js"></script>
-	<script src="./js/calc/entity.js"></script>
-	<!-- managers -->
-	<script src="./js/calc/home-calculation-manager.js"></script>
-	<script src="./js/calc/workspace-manager.js"></script>
-	<script src="./js/calc/calculation-step-manager.js"></script>
-	<script src="./js/calc/calculation-step-presenter.js"></script>
+	<script src="./js/calc/model/workspace.js"></script>
+	<script src="./js/calc/model/entity.js"></script>
 	
+	<!-- data managers -->
+	<script src="./js/calc/manager/data/workspace-manager.js"></script>
 	<!-- data manipulation managers -->
-	<script src="./js/calc/data-manager.js"></script>
-	<script src="./js/calc/data-table.js"></script>
-	<script src="./js/calc/scatter-plot.js"></script>
+	<script src="./js/calc/manager/data/data-manager.js"></script>
+	<script src="./js/calc/manager/data/data-table.js"></script>
+	<script src="./js/calc/manager/data/scatter-plot.js"></script>
+	<!-- ui managers -->
+	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
+	<script src="./js/calc/manager/ui/calculation-step-manager.js"></script>
+	<script src="./js/calc/manager/ui/calculation-step-presenter.js"></script>
+	
 	
 	<!-- sampling design  -->
-	<script src="./js/calc/sampling-design-manager.js"></script>
+	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
 	
 </body>
 </html>
