--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -1,22 +1,22 @@
 <!-- ==== Html here === -->
 <div class="page-section">
 	<!--  Nav bar -->
-<!-- 	<div class="row"> -->
-<!-- 		<div class="navbar navbar-default"> -->
-<!-- 			<div class="container"> -->
-<!-- 				<div class=""> -->
-<!-- 					<ul class="nav navbar-nav"> -->
-<!-- 						<li class="active"> -->
-<!-- 							<a href="active">Active</a> -->
-<!-- 						</li> -->
-<!-- 						<li> -->
-<!-- 							<a href="link">Link</a> -->
-<!-- 						</li> -->
-<!-- 					</ul> -->
-<!-- 				</div> -->
-<!-- 			</div> -->
-<!-- 		</div> -->
-<!-- 	</div> -->
+	<div class="row">
+		<div class="navbar navbar-default">
+			<div class="container">
+				<div class="">
+					<ul class="nav navbar-nav">
+						<li class="active">
+							<a href="active">Active</a>
+						</li>
+						<li>
+							<a href="link">Link</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<!-- edit form -->
 	<div class="row" id="calculation-step-edit-container" style="width: 100%; height: 100%; left:0">
