step edit refactoring in progress. test and execute sections

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -276,6 +276,7 @@
 	<!-- data managers -->
 	<script src="./js/calc/manager/data/workspace-manager.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-manager.js"></script>
+	<script src="./js/calc/manager/data/job-manager.js"></script>
 	<!-- data manipulation managers -->
 	<script src="./js/calc/manager/data/data-manager.js"></script>
 	<script src="./js/calc/manager/data/data-table.js"></script>
@@ -283,6 +284,7 @@
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-edit-manager.js"></script>
+	<script src="./js/calc/manager/ui/calculation-step-exec-manager.js"></script>
 	
 	
 	<!-- sampling design  -->
