--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -39,16 +39,20 @@
 	 		<div class="page-section">
 	 			
 		  		<div class="steps-container">
-		  		<!-- TODO check why removing border, height is set to 0 by the browser? -->
-		  			<div style="width: 30em ; float:left; border:1px solid #2c3e50; display: block;" >
-		  				<div style="position: fixed; width: 30em ;">
+		  		
+		  			<div class="button-bar">
+		  				<div class="button-bar-inner">
 			 				<div class="row no-margin" >
 				 				<div class="col-md-6 no-padding">
-				 					<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
+				 					<button type="button" class="btn btn-home-plus" href="step-edit.html">
 					 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
 					 				</button>
 				 				</div>
-				 				<div class="col-md-6 no-padding"></div>
+				 				<div class="col-md-6 no-padding">
+				 					<button type="button" class="btn">
+					 					<i class="fa-trash-o icon-5" style="font-size:3em"></i>
+					 				</button>
+				 				</div>
 			 				</div>
 		  				</div>
 		 			</div>
