tree estimates run making use of r data frame

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -45,12 +45,12 @@
 			 				<div class="row no-margin" >
 				 				<div class="col-md-6 no-padding">
 				 					<button type="button" class="btn btn-home-plus" href="step-edit.html">
-					 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
+					 					<i class="icon-plus-sign-alt icon-5"></i>
 					 				</button>
 				 				</div>
 				 				<div class="col-md-6 no-padding">
 				 					<button type="button" class="btn">
-					 					<i class="fa-trash-o icon-5" style="font-size:3em"></i>
+					 					<i class="fa-trash-o icon-5"></i>
 					 				</button>
 				 				</div>
 			 				</div>
