--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -228,6 +228,8 @@ $(function(){
 	var $calculationStepEditContainer = stepEdit.find("#calculation-step-edit-container");
 	var $calculationStepExecContainer = stepEdit.find("#calculation-step-exec-container");
 	
+	//TODO to be removed from here	
+	var $stepForm = $calculationStepEditContainer.find('#step-form');
 	//TODO managers here. pass containers to managers and not form. add methods show and hide?
 	/**
 	* ui managers 
