CALC-241 - Delete calculation step (from home page)

--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -56,7 +56,7 @@ $(function(){
 	    },
 	    success: function ( json ) {
 	    	checkJobStatus(function() {
-	    		homeCalculationManager.refreshHome();
+	    		homeCalculationManager.updateCalculationStepButtons();
 	    	});
 	    },
 	    error: function (e) {
