refactored data table and introduced data provider

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -287,6 +287,7 @@
 	<script src="./js/calc/manager/data/data-visualisation-manager.js"></script>
 	<script src="./js/calc/manager/data/data-table.js"></script>
 	<script src="./js/calc/manager/data/scatter-plot.js"></script>
+	<script src="./js/calc/manager/data/data-view-provider.js"></script>
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-edit-manager.js"></script>
