scatter plot refactored using data provider

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -233,7 +233,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row chart">tgfsdgsdfgdfgbfd</div>
+			<div class="row chart"></div>
 		</div>
 	</div>
 	
