--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -55,11 +55,14 @@
 			 				</div>
 		  				</div>
 		 			</div>
-		 			<div class="step-buttons-container sortable">
-	  				</div>
-		 			<button type="button" class="btn btn-default btn-home calculation-button template"
-			  		 	style="display: none"></button>
-		 			</div>
+		 			<ul class="step-buttons-container sortable">
+	  				</ul>
+	  				<ul style="display: none">
+	  					<li class="ui-state-default calculation-button template">
+				 			<button type="button" class="btn btn-default btn-home"></button>
+	  					</li>
+	  				</ul>
+	 			</div>
 	 			
 <!-- 		 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html"> -->
 <!-- 	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i> -->
